--- a/style.css
+++ b/style.css
@@ -17,8 +17,16 @@
   width: 130px;
 } 
 
+.sizeaalmacen{
+  width:110px ;
+}
+
+.sizenameguia{
+  width:116px;
+}
+
 .sizefac{
-  width: 160px;
+  width: 165px;
 }
 
 
